--- a/ctlist/templates/fourth.html
+++ b/ctlist/templates/fourth.html
@@ -128,7 +128,7 @@ function checkTime(i) {
   <li style="float:center"><a href="third.html" type="submit" class="registerbtn">Traditional Funeral Services</a></li>
   <li style="float:center"><a href="fourth.html" type="submit" class="registerbtn">Direct Cremation</a></li>
   <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">Send Flowers</a></li>
-<!--   <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">About</a></li> -->
+  <li style="float:center"><a href="seventh.html" type="submit" class="registerbtn">Other services</a></li>
 </ul>
 <!-- <main>
 <p style="color:white"><b>Staff Service</b></p>
