--- a/ctlist/templates/second.html
+++ b/ctlist/templates/second.html
@@ -100,7 +100,7 @@ li a:hover:not(.active) {
   <li style="float:center"><a href="third.html" type="submit" class="registerbtn">Traditional Funeral Services</a></li>
   <li style="float:center"><a href="fourth.html" type="submit" class="registerbtn">Direct Cremation</a></li>
   <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">Send Flowers</a></li>
-<!--   <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">About</a></li> -->
+  <li style="float:center"><a href="seventh.html" type="submit" class="registerbtn">Other services</a></li>
 </ul>
 <center>
     <h1 style="color:#f64848" "font-size:35px;">Haven’t you planned</h1> 
