--- a/ctlist/templates/fifth.html
+++ b/ctlist/templates/fifth.html
@@ -119,8 +119,8 @@ function checkTime(i) {
   <li style="float:center"><a href="second.html" type="submit" class="registerbtn">Home</a></li> 
   <li style="float:center"><a href="third.html" type="submit" class="registerbtn">Traditional Funeral Services</a></li>
   <li style="float:center"><a href="fourth.html" type="submit" class="registerbtn">Direct Cremation</a></li>
-  <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">Send Flowers</a></li>
-<!--   <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">About</a></li> -->
+  <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">Send Flowers</a></li> 
+  <li style="float:center"><a href="seventh.html" type="submit" class="registerbtn">Other services</a></li>
 </ul>
 <form id="asd" action="">
 <p style="color:white"><b>Available Funeral flowers</b></p>
