--- a/ctlist/templates/third.html
+++ b/ctlist/templates/third.html
@@ -119,7 +119,7 @@ function checkTime(i) {
   <li style="float:center"><a href="third.html" type="submit" class="registerbtn">Traditional Funeral Services</a></li>
   <li style="float:center"><a href="fourth.html" type="submit" class="registerbtn">Direct Cremation</a></li>
   <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">Send Flowers</a></li>
-<!--   <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">About</a></li> -->
+  <li style="float:center"><a href="seventh.html" type="submit" class="registerbtn">Other services</a></li>
 </ul>
 <div class="gallery">
   <p target="_blank">
@@ -141,7 +141,7 @@ function checkTime(i) {
 </div>
 </br></br></br></br></br></br></br></br></br></br></br></br>
   <script src="label.js" type="text/javascript"></script>
-  <form id="privtelabel" method="POST">
+  <form id="privtelabel" method="POST" action="ProjectPage">
   <p style="color:white">Product:
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -154,7 +154,7 @@ function checkTime(i) {
     <br> Quantity:
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <input type="text" name="quantity" id='quantity' required></br>
+     <input type="text" name="Quantity" id='Quantity' required></br>
      <br> Size:
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -204,7 +204,7 @@ function calculateTotal() {
 </script>
   </form>
   <center>
-    <a href="sixth.html" type="submit" class="registerbtn" style="color:black">Proceed to payment center</a>
+    <a href="ProjectPage" type="submit" class="registerbtn" style="color:black">Proceed to payment center</a>
 </center>
 </form>
 </div>
