--- a/ctlist/templates/fourth.html
+++ b/ctlist/templates/fourth.html
@@ -124,11 +124,11 @@ function checkTime(i) {
 <hr>
 </center>
 <ul>
-  <li style="float:center"><a href="second.html" type="submit" class="registerbtn">Home</a></li> 
-  <li style="float:center"><a href="third.html" type="submit" class="registerbtn">Traditional Funeral Services</a></li>
-  <li style="float:center"><a href="fourth.html" type="submit" class="registerbtn">Direct Cremation</a></li>
-  <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">Send Flowers</a></li>
-  <li style="float:center"><a href="seventh.html" type="submit" class="registerbtn">Other services</a></li>
+   <li style="float:center"><a href="home" type="submit" class="registerbtn">Home</a></li> 
+  <li style="float:center"><a href="Traditional" type="submit" class="registerbtn">Traditional Funeral Services</a></li>
+  <li style="float:center"><a href="Direct" type="submit" class="registerbtn">Direct Cremation</a></li>
+  <li style="float:center"><a href="Flower" type="submit" class="registerbtn">Send Flowers</a></li>
+    <li style="float:center"><a href="CRUD" type="submit" class="registerbtn">Other services</a></li>
 </ul>
 <!-- <main>
 <p style="color:white"><b>Staff Service</b></p>
@@ -194,6 +194,9 @@ function multiply(){
   <div class="desc" style="color:#e44e4e"><b>The Pet Cremation Urns</b></div>
 </div>
 </br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+ <script src="label.js" type="text/javascript"></script>
+  <form id="privtelabel" method="POST" action="ProjectPage">
+    {% csrf_token %}
  <p style="color:white">Product:
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -209,7 +212,7 @@ function multiply(){
     <br> Quantity:
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <input type="text" name="quantity" id='quantity' required></br>
+     <input type="text" name="Quantity" id='Quantity' required></br>
      <br> Size:
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -266,7 +269,7 @@ function calculateTotal() {
 </script>
 </div>
 <center>
-  <a href="sixth.html" type="submit" class="registerbtn" style="color:black">Proceed to payment center</a>
+  <input type="submit" class="registerbtn" style="color:black" value="Proceed to payment center"></input>
 </center>
 </form>
 </body>
