--- a/ctlist/templates/third.html
+++ b/ctlist/templates/third.html
@@ -115,11 +115,11 @@ function checkTime(i) {
 <hr>
 </center>
 <ul>
-  <li style="float:center"><a href="second.html" type="submit" class="registerbtn">Home</a></li> 
-  <li style="float:center"><a href="third.html" type="submit" class="registerbtn">Traditional Funeral Services</a></li>
-  <li style="float:center"><a href="fourth.html" type="submit" class="registerbtn">Direct Cremation</a></li>
-  <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">Send Flowers</a></li>
-  <li style="float:center"><a href="seventh.html" type="submit" class="registerbtn">Other services</a></li>
+   <li style="float:center"><a href="home" type="submit" class="registerbtn">Home</a></li> 
+  <li style="float:center"><a href="Traditional" type="submit" class="registerbtn">Traditional Funeral Services</a></li>
+  <li style="float:center"><a href="Direct" type="submit" class="registerbtn">Direct Cremation</a></li>
+  <li style="float:center"><a href="Flower" type="submit" class="registerbtn">Send Flowers</a></li>
+    <li style="float:center"><a href="CRUD" type="submit" class="registerbtn">Other services</a></li>
 </ul>
 <div class="gallery">
   <p target="_blank">
@@ -142,6 +142,7 @@ function checkTime(i) {
 </br></br></br></br></br></br></br></br></br></br></br></br>
   <script src="label.js" type="text/javascript"></script>
   <form id="privtelabel" method="POST" action="ProjectPage">
+    {% csrf_token %}
   <p style="color:white">Product:
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -169,7 +170,6 @@ function checkTime(i) {
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     <span id="totalCost" style="color:black"></span></p>
- </form>
 <script>
 var productEl = document.querySelector('#product');
 var quantityEl = document.querySelector('#quantity');
@@ -202,9 +202,8 @@ function calculateTotal() {
   totalCostEl.textContent = `${(unitCost * qty) + additionalCost}`;
 }
 </script>
-  </form>
   <center>
-    <a href="ProjectPage" type="submit" class="registerbtn" style="color:black">Proceed to payment center</a>
+    <input type="submit" class="registerbtn" style="color:black" value="Proceed to payment center"></input>
 </center>
 </form>
 </div>
